--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,154 @@
-.App {
-  text-align: center;
+.app {
+  border-radius: 10px;
+  margin-left: 150px;
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.sideBar {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-family: "Poppins", sans-serif;
+  -webkit-box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
+  width: 16%;
+  height: 100%;
+  padding: 10px;
+  border-radius: 10px;
+
 }
 
-.App-link {
-  color: #61dafb;
+
+.sideBar_Menu {
+  border-radius: 10px;
+  padding: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.theme {
+display: flex;
+
+}
+
+.theme_BTNs {
+  border-radius: 5px;
+  color: var(--text-color);
+  overflow: hidden;
+  display: flex;
+  padding: 10px;
+  margin: 15px;
+
+
+}
+
+
+.theme_BTN {
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 18px;
+  display: flex;
+  cursor: pointer;
+  margin-right: 5px;
+
+}
+
+
+
+.theme_BTN:hover {
+  background-color: #f5f4fd;
+}
+
+.theme_arrow_BTN {
+  margin-right: -30px;
+  background-color: #000000;
+  border-radius: 50%;
+  color: #f9f8fb;
+  margin-top: 26px;
+  margin-bottom: 26px;
+  height: 30px;
+  width: 30px;
+  padding: 1px;
+}
+
+.sidebar_buttons {
+  border-radius: 6px;
+  padding: 10px;
+}
+
+
+.sidebar_BTN {
+  cursor: pointer;
+  margin: 12px;
+  padding: 8px;
+  border-radius: 5px;
+  padding: 8px;
+  font-size: 18px;
+  display: flex;
+  padding-left: 50px;
+  
+}
+
+.sidebar_BTN:hover{
+  transform: scale(1.1);
+}
+
+.shrinkMenu {
+  border-radius: 10px;
+  font-family: "Poppins", sans-serif;
+  -webkit-box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
+  width: 6%;
+  height: 100%;
+  padding: 10px;
+}
+
+.shrinkMenu_Buttons {
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+
+.shrinkMenu_theme {
+  display: flex;
+}
+
+.shrinkMenu_Button {
+  margin: 5px;
+  padding: 10px;
+  border-radius: 10px;
+  border: 3px solid #f5f4fd;
+}
+
+.shrinkMenu_Button:hover{
+  transform: scale(1.1);
+}
+
+.mode {
+  margin: 5px;
+  padding: 10px;
+  border-radius: 10px;
+  margin-right: 20px;
+  height: 25px;
+  border: 3px solid #f5f4fd;
+}
+
+
+.listItems{
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+}
+
+
+.shrink_arrow_btn {
+  background-color: #000000;
+  border-radius: 50%;
+  color: #f9f8fb;
+  margin-top: 26px;
+  margin-bottom: 26px;
+  height: 20px;
+  width: 30px;
+  padding: 2px;
+
 }
